# password-policy-checker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
checker/: __init__.py  batch.py  cli.py  entropy.py  evaluator.py  hibp.py  patterns.py  policy.py  reporter.py
checker/data/: common_passwords.txt
examples/: passwords_sample.txt  policy_corporate_strict.json  policy_nist_compliant.json
tests/: conftest.py  test_batch.py  test_entropy.py  test_evaluator.py  test_hibp.py  test_patterns.py  test_policy.py
